# robo_tesis_G

./: CMakeLists.txt  my_robot_config.json  package.xml
assets/: antena_link.part  antena_t_s.part  antena_t_s.stl  base_link.part  base_link.stl  camara_link.part  camara_link.stl  camara_t_s.part  camara_t_s.stl  faro_delantero_link.part  faro_delantero_link.stl  faro_t_f.part  faro_t_s.part  faro_trasero_link.part  faro_trasero_link.stl  lidar_link.part  llanta_dere_del.part  llanta_dere_tra.part  llanta_iz_del.part  llanta_iz_tra.part  tapa_link.part  tapa_tf.part  tapa_tf.stl  ultra_t.part  ultra_t.stl
launch/: gz_inicio_1.launch.py  gz_inicio_2.launch.py  gz_map.launch.py  gz_nav.launch.py  rviz.launch.py  rviz2.launch.py
maps/: area_emergencia.pgm  area_emergencia.yaml
rviz/: genera_maps.rviz  my_robo.rviz  nav.rviz  nav_2.rviz
scripts/: atencion.py  cinematica_directa.py  faro.py  plot_esfuerzo.py  plot_movimiento.py
urdf/: my_robot.urdf.xacro  my_robot2.urdf.xacro  robot.urdf
urdf/gazebo/: gazebo_plugins.xacro  gazebo_properties.xacro
urdf/modules/: accesorios.xacro  base_y_llantas.xacro  camara.xacro  lidar.xacro
urdf/xacro_properties/: xacro_properties.xacro
worlds/: area_emergencia.sdf  cuarto.sdf  pasillos.sdf
yaml/: amcl_params.yaml  mapper_params.yaml  nav2_params.yaml
